--- a/app/src/main/res/layout/activity_during_match.xml
+++ b/app/src/main/res/layout/activity_during_match.xml
@@ -96,13 +96,6 @@
         android:layout_alignEnd="@+id/duringListCom"
         android:layout_toEndOf="@+id/button3"
         android:layout_alignTop="@+id/btnAUtreMatch" />
-    <Button
-        android:text="Commenter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnDuringCOmm"
-        android:layout_alignParentBottom="true"
-         />
 
     <TextView
         android:text="TextView"
@@ -112,5 +105,14 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/txtDuringJournee"
         android:layout_below="@+id/txtDuringDate" />
+
+    <Button
+        android:text="Commenter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDuringCOmm"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="13dp" />
 
 </RelativeLayout>
